--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,13 +5,33 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Phonebook"
         mc:Ignorable="d"
-        Title="MainWindow" Height="600" Width="800">
+        Title="MainWindow" Height="600" Width="800" Loaded="Window_Loaded">
     <Grid>
-        <Label Content="Id" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="txtId" HorizontalAlignment="Left" Margin="10,41,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="333*"/>
+            <ColumnDefinition Width="467*"/>
+        </Grid.ColumnDefinitions>
+        <Label Content="Id" HorizontalAlignment="Left" Margin="10,20,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="txtId" Height="23" HorizontalAlignment="Left" Margin="10,50,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" IsEnabled="False"/>
 
-        <Label Content="Id" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="txtName" HorizontalAlignment="Left" Margin="10,41,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+        <Label Content="Name" HorizontalAlignment="Left" Margin="10,85,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="txtName" Height="23" HorizontalAlignment="Left" Margin="10,115,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="780" Grid.ColumnSpan="2"/>
+
+        <Label Content="Phone" HorizontalAlignment="Left" Margin="10,150,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="txtPhone" Height="23" HorizontalAlignment="Left" Margin="10,180,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="780" Grid.ColumnSpan="2"/>
+
+        <Label Content="Email" HorizontalAlignment="Left" Margin="10,215,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="txtEmail" Height="23" HorizontalAlignment="Left" Margin="10,245,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="780" Grid.ColumnSpan="2"/>
+
+        <Button x:Name="btnAdd" Content="Add" HorizontalAlignment="Left" Margin="10,326,0,0" Width="80" Height="23" VerticalAlignment="Top" Click="btnAdd_Click"/>
+        <Button x:Name="btnEdit" Content="Edit" HorizontalAlignment="Left" Margin="95,326,0,0" Width="80" Height="23" VerticalAlignment="Top" Click="btnEdit_Click"/>
+        <Button x:Name="btnDelete" Content="Delete" HorizontalAlignment="Left" Margin="180,326,0,0" Width="80" Height="23" VerticalAlignment="Top" Click="btnDelete_Click"/>
+        <Button x:Name="btnSearch" Content="Search" HorizontalAlignment="Left" Margin="265,326,0,0" Width="80" Height="23" VerticalAlignment="Top" Grid.ColumnSpan="2" Click="btnSearch_Click"/>
+        <Button x:Name="btnSave" Content="Save" HorizontalAlignment="Left" Margin="17,326,0,0" Width="80" Height="23" VerticalAlignment="Top" Click="btnSave_Click" Grid.Column="1"/>
+        <Button x:Name="btnCancel" Content="Cancel" HorizontalAlignment="Left" Margin="102,326,0,0" Width="80" Height="23" VerticalAlignment="Top" Grid.Column="1" Click="btnCancel_Click"/>
+
+
+        <DataGrid x:Name="dgContacts" IsReadOnly="True" HorizontalAlignment="Left" Height="160" Margin="10,415,0,0" VerticalAlignment="Top" Width="780" Grid.ColumnSpan="2" MouseDoubleClick="dgContacts_MouseDoubleClick" SelectionMode="Single"/>
 
     </Grid>
 </Window>
